# backend-legacy

./: .gitignore  Procfile  README.md  datadump.json  db.sqlite3  manage.py  manual_entry.py  pyproject.toml
topical/: admin.py  apps.py  asgi.py  foreign.py  models.py  rest.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
topical/management/commands/: manualentry.py  mkdefaults.py
topical/migrations/: 0001_initial.py  0002_auto_20200717_2236.py  0003_ingredient_name.py  0004_auto_20200718_0123.py  0005_auto_20200718_0141.py  0006_auto_20200718_2002.py  0007_auto_20200718_2028.py  0008_auto_20200719_2217.py  0009_auto_20200721_1818.py  0010_ingredient_image_url.py  0011_auto_20200723_1408.py  0012_auto_20200724_0406.py  0013_auto_20200724_1712.py  0013_auto_20200724_2221.py  0014_auto_20200724_1718.py  0014_user_is_setup.py  0015_auto_20200724_1825.py  0015_auto_20200727_1744.py  0016_auto_20200724_1828.py  0016_auto_20200724_2216.py  0016_tag.py  0017_auto_20200728_1444.py  0018_auto_20200728_1445.py  0019_auto_20200728_1447.py  0020_ingredienttagdict_ingredienttagentry.py  0021_auto_20200729_1938.py  0022_auto_20200729_1957.py  0023_auto_20200729_1958.py  0024_auto_20200729_2000.py  0025_auto_20200729_2058.py  0026_auto_20200730_1609.py  0027_exclusionprofile_uuid.py
